<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuInicio">

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="175dp"
        android:layout_height="34dp"
        android:text="TextView"
        style="@style/titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="256dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@drawable/logomenu" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="105dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        app:srcCompat="@drawable/iconopedircita" />

    <Button
        android:id="@+id/button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonCitar"
        android:text="@string/agenda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="90dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473"
        app:srcCompat="@drawable/vercitas" />

    <Button
        android:id="@+id/button2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonCancelar"
        android:text="@string/citas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="98dp"
        android:layout_height="87dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762"
        app:srcCompat="@drawable/iconoconocenos" />

    <Button
        android:id="@+id/button3"

        android:layout_width="124dp"
        android:layout_height="82dp"
        android:onClick="buttonConocenos"
        android:text="@string/conocenos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="99dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759"
        app:srcCompat="@drawable/iconosalir" />

    <Button
        android:id="@+id/button4"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonSalir"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />
</androidx.constraintlayout.widget.ConstraintLayout>